CB-17616 Disable PEM related stackpatcher by default

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -909,7 +909,7 @@ existing-stack-patcher:
       date-before: 2022-01-18
       custom-rpm-url: https://archive.cloudera.com/cp_clients/thunderhead-metering-heartbeat-application-0.1-SNAPSHOT.x86_64.rpm
     cluster-public-endpoint:
-      enabled: true
+      enabled: false
       related-stacks:
 
 clusterdns:
