CB-17786. Add internal remote write endpoint for compute monitoring.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -28,6 +28,7 @@ telemetry:
     enabled: false
     paas-support: false
     remote-write-url: ""
+    remote-write-internal-url: ""
     scrape-interval-seconds: 60
     dev-stack: false
     status-processor:
