CB-17796 Upper Limit of Upscale nodecount should be controlled by entitlement

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -175,9 +175,14 @@ cb:
 
   limit:
     nodeCountLimits:
-      cm: 400
-      infrastructure: 500
-      upgrade: 200
+      safe:
+        cm: 400
+        infrastructure: 500
+        upgrade: 200
+      experimental:
+        cm: 800
+        infrastructure: 800
+        upgrade: 200
 
   aws:
     spotinstances.enabled: true
