CB-17232: [pre-check] Implement new data lake API to trigger permission validation backup location.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -50,7 +50,7 @@ auth:
       multiaz.enable: true
       select.instance.type.enable: true
       zdu.osupgrade.enable: true
-      backup.restore.permission.checks.enabled: false
+      backup.restore.permission.checks.enabled: true
     differentdatahubversionthandatalake.enabled: true
     database.wire.encryption.enable: true
     datahub:
