--- a/integration-test/src/main/resources/testsuites/e2e/sdx-recovery-tests.yaml
+++ b/integration-test/src/main/resources/testsuites/e2e/sdx-recovery-tests.yaml
@@ -2,4 +2,4 @@ name: "sdx-recovery-tests"
 tests:
   - name: "sdx_e2e_recovery_tests"
     classes:
-      - name: com.sequenceiq.it.cloudbreak.testcase.e2e.sdx.SdxRecoveryTests
+      - name: com.sequenceiq.it.cloudbreak.testcase.e2e.sdx.SdxUpgradeRecoveryTests
