CB-17837 - Roll forward sync fails because some 'p' ending cloudera-manager-server versions are named differently in repository and image catalog
This commit:
 - introduces a package pattern that removes unwanted characters from
end of pattern
 - rewrites `SaltStatesTest` to use JUnit5

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -792,9 +792,9 @@ cb:
       - name: cm
         pkg:
           - name: cloudera-manager-agent
-            pattern: "(.*)-(.*)\\..*"
+            pattern: "(.*)-([0-9]+)[a-zA-z]*\\..*"
           - name: cloudera-manager-server
-            pattern: "(.*)-(.*)\\..*"
+            pattern: "(.*)-([0-9]+)[a-zA-z]*\\..*"
         prewarmed: true
   paywall.url: "https://archive.cloudera.com/p/cdp-public/"
   nodestatus:
