CB-17180 Detect and fix Freeipa saltuser password errors
A salt command querying the saltuser password expiry date is sent to all gateway instances of a stack:
- If the password expires sooner than a set threshold, a salt password rotation is started.
- If it responds with an unauthorized response, a salt password rotation is started.
- Other types of errors are only logged.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -127,3 +127,8 @@ telemetry:
       diagnostics-collect: 360
       metering-upgrade: 5
       telemetry-upgrade: 50
+jobs:
+  salt-status-checker:
+    enabled: true
+    interval-in-minutes: 60
+    password-expiry-threshold-in-days: 14
