CB-17836 - Roll forward sync fails after upgrade because of cloudera-manager-server version consistency validation
This commit:
 - removes CM server and agent consistency check as there might be
different server versions in the CM Server and the other nodes
 - introduces parameter for multiple version consistency check for the
same reason

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -793,8 +793,10 @@ cb:
         pkg:
           - name: cloudera-manager-agent
             pattern: "(.*)-([0-9]+)[a-zA-z]*\\..*"
+            validateForMultipleVersions: true
           - name: cloudera-manager-server
             pattern: "(.*)-([0-9]+)[a-zA-z]*\\..*"
+            validateForMultipleVersions: false
         prewarmed: true
   paywall.url: "https://archive.cloudera.com/p/cdp-public/"
   nodestatus:
