CB-17940 Add new AWS instance types
Also adding to the aws-encryption-support.json, with a missing item.
The disabled instance types are now removed from services other than
core, where it was removed many months ago.

--- a/cloud-consumption/src/main/resources/application.yml
+++ b/cloud-consumption/src/main/resources/application.yml
@@ -128,7 +128,7 @@ cb:
       contentlogging: true
   aws:
     spotinstances.enabled: true
-    disabled.instance.types: c5d,f1,i3,m5d,p3dn,r5d,z1d
+    disabled.instance.types:
     hostkey.verify: false
     credential.cache.ttl: 60
     external.id: provision-ambari
