--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -219,6 +219,13 @@ cb:
         m5d.12xlarge,
         m5d.16xlarge,
         m5d.24xlarge,
+        m5dn.xlarge,
+        m5dn.2xlarge,
+        m5dn.4xlarge,
+        m5dn.8xlarge,
+        m5dn.12xlarge,
+        m5dn.16xlarge,
+        m5dn.24xlarge,
         r5a.4xlarge,
         r5a.8xlarge,
         r5ad.xlarge,
