--- a/redbeams/src/main/resources/application.yml
+++ b/redbeams/src/main/resources/application.yml
@@ -330,7 +330,7 @@ cb:
 
   aws:
     spotinstances.enabled: true
-    disabled.instance.types: c5d,f1,i3,m5d,p3dn,r5d,z1d
+    disabled.instance.types:
     hostkey.verify: false
     external.id: provision-ambari
     role.session.name: cdp-provisioning
