CB-17954 Refactor databus-connector module to use streaming-common
The code of databus-connector and streaming-common is the same or very similar in many places, so it makes sense to reuse code from streaming-common in databus-connector.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -101,6 +101,7 @@ telemetry:
       queueSizeLimit: 2000
       dbus-app-name: manowar_dev-mow-UsageEvents
       dbus-stream-name: manowar_dev-mow-UsageEvents
+      streaming-enabled: false
       headers:
         origin: CONTROL_PLANE
         processor: NO_EDH
