--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -100,6 +100,7 @@ auth:
     workloadiam.sync.enable: false
     saas.sdx.integration.enable: true
     salt.rotatepassword.enable: true
+    postgres.upgrade.embedded.enable: true
 
 crn:
   partition: cdp
