CB-18058 Ability to define Postgres version from runtime version X
When the database engine version is not defined in the request, it would be overridden with the defined value if the runtime version is equal or higher than the deifned.
For now it is set to a not existing high veresion number so it doesn't effect anything.

Logic:
- engine version empty and runtime is older: engine version is null, current default behavior
- engine version empty and runtime is equal or new: engine version is overridden with defined version (currently 11)
- engine version is specified in the request: independently from runtime version it will be honored and won't be overridden

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -132,3 +132,7 @@ jobs:
     enabled: true
     interval-in-minutes: 60
     password-expiry-threshold-in-days: 14
+cb:
+  db.override:
+    minRuntimeVersion: 7.2.7
+    engineVersion: 11
