--- a/integration-test/test-image/Dockerfile
+++ b/integration-test/test-image/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker-private.infra.cloudera.com/cloudera_base/ubi8/cldr-ubi-minimal-java:jdk11-ubi8.5-218
+FROM docker-private.infra.cloudera.com/cloudera_base/ubi8/cldr-openjdk-11-runtime:1.14-3-03082022
 MAINTAINER info@cloudera.com
 
 WORKDIR /
