CB-17348 Create e2e test for saltuser password rotation
Verify the changed password and password expiry dates on FreeIPA, Datalake and Datahub clusters with the following steps:
- Set the password change date to a past date (on new clsuters that would be the current day by default)
- Get the saltuser line from the shadow file and save it as a reference
- Call the rotate salt password endpoint
- Verify that the saltuser's line in the shadow file was changed
- Verify that the saltuser's password change date is set to today

--- a/integration-test/src/main/resources/testsuites/e2e/aws-e2e-tests.yaml
+++ b/integration-test/src/main/resources/testsuites/e2e/aws-e2e-tests.yaml
@@ -16,3 +16,4 @@ tests:
       - name: com.sequenceiq.it.cloudbreak.testcase.e2e.sdx.SdxRecipeTests
       - name: com.sequenceiq.it.cloudbreak.testcase.e2e.sdx.SdxRangerRazEnabledTests
       - name: com.sequenceiq.it.cloudbreak.testcase.e2e.sdx.InternalSdxRepairWithRecipeTest
+      - name: com.sequenceiq.it.cloudbreak.testcase.e2e.saltpassword.RotateSaltPasswordE2ETest
