CB-18174 Cloudbreak uses old Azure SDK that is relying on old nimbusds libraries, and therefore the cert based authentication failed with NoSuchMethodError.
 Main problem, that it looks like that:
  - com.nimbusds:oauth2-oidc-sdk:6.5
  - com.nimbusds:nimbus-jose-jwt:[6.0.1,) -> 9.23 are incompatible

  Solution is to update Azure SDK and Azure Client Auth version

--- a/cloud-azure/build.gradle
+++ b/cloud-azure/build.gradle
@@ -27,7 +27,7 @@ dependencies {
   implementation group: 'com.squareup.okhttp3',          name: 'okhttp-urlconnection',       version: okhttpVersion
   implementation group: 'com.squareup.okhttp3',          name: 'logging-interceptor',        version: okhttpVersion
 
-  implementation (group: 'com.microsoft.azure',         name: 'azure-client-authentication') {
+  implementation (group: 'com.microsoft.azure',         name: 'azure-client-authentication', version: azureClientAuthVersion) {
     exclude group: 'org.slf4j'
   }
   implementation (group: 'com.microsoft.azure',         name: 'azure',                      version: azureSdkVersion) {
