--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@ org.gradle.logging.level=lifecycle
 # Version definition
 springBootVersion=2.5.12
 awsSdkVersion=1.11.952
-azureSdkVersion=1.41.2
+azureClientAuthVersion=1.7.14
+azureSdkVersion=1.41.4
 azureStorageSdkVersion=8.4.0
 caffeineVersion=2.8.1
 eventBusVersion=2.0.7.RELEASE
@@ -69,7 +70,6 @@ hamcrestVersion=2.2
 sonarVersion=3.3
 jsonSmartVersion=2.4.5
 accessorSmartVersion=2.4.7
-oauth2OidcSdkVersion=6.5
 protobufVersion=3.19.1
 grpcVersion=1.42.1
 dyngrPollingVersion=1.1.3
