CB-18178 Increase SSSD cache timeouts
SSSD timeouts have been configured to 30sec while the default value is 1.5h. The reasons behind this decision were:
- altus had this setting
- testing for QE was easier as they don't have to wait after usersync

This setting in large scale seems to cause issues, especially as we populate SSSD config with {{enumerate = true}} where Ranger or Nifi component is installed. For these instances it looks like SSSD is constantly consuming a lot of processing time when there is a lot of users and/or groups. Also this is putting high pressure on FreeIPA instances.
We have seen already customers in the need to vertically upscale FreeIPA instances just to be able to handle these loads.

For now we would like to increase this setting from 30sec to 300sec(5min) to see how it effects testing and customers. We expect this to decrease the load.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -932,3 +932,7 @@ existing-stack-patcher:
 clusterdns:
   host: localhost
   port: 8982
+
+sssd:
+  entry.cache.timeout: 300
+  memcache.timeout: 300
