--- a/build.gradle
+++ b/build.gradle
@@ -157,7 +157,8 @@ subprojects {
                         '**/cloudbreak/api/endpoint/**',
                         '**/cloudbreak/domain/**',
                         '**/environment/**/domain/**',
-                        '**/environment/**/attributes/**'
+                        '**/environment/**/attributes/**',
+                        '**Config**.java'
                 ]
         )
       })
