--- a/environment-api/build.gradle
+++ b/environment-api/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation     project(':auth-internal-api')
     implementation     project(":auth-connector")
     implementation     project(":common-model")
+    implementation     project(":freeipa-api")
     implementation     project(":structuredevent-api-cdp")
 
     implementation     group: "org.apache.commons",            name: "commons-lang3",                  version: apacheCommonsLangVersion
