--- a/cloud-aws-common/build.gradle
+++ b/cloud-aws-common/build.gradle
@@ -21,6 +21,7 @@ dependencies {
   implementation project(':common-handlebar')
   implementation project(':template-manager-tag')
   implementation project(':auth-connector')
+  implementation project(':usage-collection')
 
   implementation group: 'com.dyngr', name: 'polling', version: dyngrPollingVersion
 
