--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -147,9 +147,11 @@ dependencies {
   implementation project(':template-manager-tag')
   implementation project(':cloud-aws-cloudformation')
   implementation project(':cloud-aws-native')
+  implementation project(':cloud-aws-common')
   implementation project(':cloud-aws-gov')
   implementation project(':cloud-azure')
   implementation project(':cloud-gcp')
+  implementation project(':cloud-template')
 
   runtimeOnly project(':orchestrator-salt')
   runtimeOnly project(':cloud-mock')
