CB-18211 Sync DB engine version into `Stack` and `SdxCluster` if missing
Introduced a new stack patcher for fetching DB engine version where missing.
In case of embedded it runs only if the stack is available as it has to run a salt command to get the actual version.
In case of external it gets the version from redbeams and syncs it regardless the stack status.

The sync runs as a quartz job, using StackPatcher framework in the core. When a Datalake is affected it updates the datala service db
by calling an internal endpoint. This way there is no need to introduce a new quartz job and datalake side.

If anything goes sideways, like the version can't be fetched, then it will be retried another time scheduled by the framework.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -931,6 +931,8 @@ existing-stack-patcher:
     cluster-public-endpoint:
       enabled: false
       related-stacks:
+    collect-db-engine-version:
+      enabled: true
 
 clusterdns:
   host: localhost
