CB-18121. Refactor salt pillar generation for telemetry related components.
details:
- instead of passing more and more parameters for configuration services, pass only a global telemetry context
- telemetry context contains other contexts and can be filled with the config view output
- salt decorator is moved to telemetry-common, the decorator has a new reference called telemetry context provider which needs to be implemented on core/freeipa side (that's the main logic to generate the input for the decorators)
- config view generation can be skipped for different states based on the isEnabled method implementation of the telemetry context provider
- refactor TelemetryDecorator and TelemetryConfigService based on the new changes
- added UTs
Also including a few new changes as config generation was refactored:
- consider cm auto tls feature for SMON prometheus settings (default will be true if the value empty in the pillar)
- added paas url + internal url options - these will fallback to the original monitoring urls (fallback happens on metricsClient side as well)
- pass access key type to monitoring + diagnostics (it has been already passwd for databus) - also add access key type field for Databus/Monitoring credentials
- create CdpCredential object that will be the parent of DataBusCredential and MonitoringCredential (helps for refactor or for future refactor)

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -26,9 +26,11 @@ telemetry:
     gpg-check: 1
   monitoring:
     enabled: false
-    paas-support: false
     remote-write-url: ""
     remote-write-internal-url: ""
+    paas-support: false
+    paas-remote-write-url: ""
+    paas-remote-write-internal-url: ""
     scrape-interval-seconds: 60
     dev-stack: false
     status-processor:
