--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -76,6 +76,9 @@ telemetry:
     blackbox-exporter:
       user: blackboxuser
       port: 9115
+      checkOnAllNodes: false
+      cloudIntervalSeconds: 600
+      clouderaIntervalSeconds: 1800
     cloudera-manager-exporter:
       user: cmmonitoring
       port: 61010
