CB-18223: Permit the RDS upgrade based on the runtime version
This commit contains the following changes:

- Validation for permit the RDS upgrade based on the runtime version
- Entitlement to allow Pg11 upgrade regardless of the runtime version

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -103,6 +103,7 @@ auth:
     saas.sdx.integration.enable: true
     salt.rotatepassword.enable: true
     postgres.upgrade.embedded.enable: true
+    postgres.upgrade.exception.enable: false
 
 crn:
   partition: cdp
