CB-18327 Disable CF to Native migration by default in UMS mock

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -80,7 +80,7 @@ auth:
         SSEWithCMK.enable: true
       encryptionAtHost.enable: false
     aws:
-      native.variant.migration.enable: true
+      native.variant.migration.enable: false
       disk:
         EncryptionWithCMK.enable: true
     datahub.customconfigs.enable: true
