--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -80,6 +80,7 @@ auth:
       disk:
         SSEWithCMK.enable: true
       encryptionAtHost.enable: false
+      certificate.auth.enable: true
     aws:
       native.variant.migration.enable: false
       disk:
