CB-18030 - Run backup-restore flow steps only for Azure
There is a parameter  introduced in the application.yml to determine for
which cloud platform  backup and restore flow steps should be run or can be skipped.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -175,6 +175,7 @@ cb:
     upgrade:
       embedded.targetversion: VERSION_11
       rds.targetversion: VERSION_11
+      rds.backuprestore.cloudplatforms: AZURE
 
   externaldatabase.ssl.rootcerts.path: /hadoopfs/fs1/database-cacerts/certs.pem
 
