--- a/datalake/build.gradle
+++ b/datalake/build.gradle
@@ -92,9 +92,12 @@ dependencies {
   testImplementation project(path: ':authorization-common', configuration: 'tests')
   testImplementation project(path: ':common', configuration: 'tests')
   testImplementation project(path: ':flow', configuration: 'tests')
-
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',        version: springBootVersion
   testImplementation group: 'org.mockito',               name: 'mockito-inline',                  version: mockitoVersion
+
+  testRuntimeClasspath group: 'org.testcontainers',      name: 'postgresql',                      version: testContainersVersion
+  testRuntimeClasspath group: 'org.awaitility',          name: 'awaitility',                      version: awaitilityVersion
+
 }
 
 bootRun {
