CB-18348 Introduce configurable minimum node count limit and default node count for FreeIPA deployments on Environment service level
Introduce configurable values for FreeIpa deployment request and it's validation on properyt path environment.freeipa.groupInstanceCount:
 - default
 - minimum
This way we would like to support only HA FreeIpa deployments on Manowar GOV related envs.

--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -90,6 +90,9 @@ environment:
     contextPath: /freeipa
     synchronizeOnStart: true
     supportedPlatforms: AWS,AZURE,GCP,MOCK
+    groupInstanceCount:
+      default: 2
+      minimum: 1
   sdx:
     url: http://localhost:8086
     contextPath: /dl
