CB-17578 Validate root volume has enough space for db backup
This commit moves the RDS upgrade into a flowchain and adds a validation flow before it. The validation flow, in case of Azure, validates that the root volume has enough space for backing up the database. The validation is done via checking the free space of the root volume with df on the primary gateway, executing a psql command that summarises the size of the available databases and compares the two. The psql command execution is done via a new Salt state, hence the first flowstep in the validation flow is to redistribute the salt states. This redistribution is also required for the upgrade flow's backup and restore steps.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -175,7 +175,9 @@ cb:
     upgrade:
       embedded.targetversion: VERSION_11
       rds.targetversion: VERSION_11
-      rds.backuprestore.cloudplatforms: AZURE
+      rds.backuprestore:
+        cloudplatforms: AZURE
+        validationratio: 0.1
 
   externaldatabase.ssl.rootcerts.path: /hadoopfs/fs1/database-cacerts/certs.pem
 
