CB-18412. Use min_backoff and max_backoff values for remote writes by prometheus agents.
details:
- there was a 3 day outage for thanos on last week, the load grew really huge during that time because of the remote write request replays.
- increase default min/max backoff (15ms / 5s to 1s / 20m)
- see: https://prometheus.io/docs/practices/remote_write/

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -50,6 +50,8 @@ telemetry:
       retention-min-time: "5m"
       retention-max-time: "4h"
       wal-truncate-frequency: "2h"
+      min-backoff: "1s"
+      max-backoff: "20m"
     request-signer:
       enabled: true
       port: 61095
