CB-18460 Poll permission replication for `Host Enrollment` privilege
There was a previous commit trying to mitigate an issue when permission replication caused deadlock: https://github.com/hortonworks/cloudbreak/commit/9452210f3a5a03746a3edd4bf1a61a4e0a58101c
This worked well for most cases, but there were still issues when permission replication caused deadlock and cluster provision issues, especially in e2e tests.

The final solution is that in case of HA FreeIPA installation, when adding a permission to the privilege we poll each isntance to check if the change is replicated and wait for the replication to happen before adding the next permission.
This should eliminate any conflict or deadlock, or if it happens anyway, then it should wait until it's resolved or otherwise fail the FreeIPA provisioning itself, preventing DL provision.
The polling is for 5min with 20sec interval right now.

--- a/cloud-common/build.gradle
+++ b/cloud-common/build.gradle
@@ -54,8 +54,9 @@ dependencies {
     implementation group: 'org.postgresql',                        name: 'postgresql',                     version: postgreSQLVersion
     implementation group: 'org.apache.commons',                    name: 'commons-lang3',                  version: apacheCommonsLangVersion
     implementation group: 'net.sf.json-lib',                       name: 'json-lib',                       version: '2.4',  classifier: 'jdk15'
+    implementation group: 'com.dyngr',                             name: 'polling',                        version: dyngrPollingVersion
 
-    testImplementation group: 'org.mockito',                       name: 'mockito-core',                   version: mockitoVersion
+  testImplementation group: 'org.mockito',                       name: 'mockito-core',                   version: mockitoVersion
     testImplementation group: 'org.springframework.boot',          name: 'spring-boot-starter-test',       version: springBootVersion
     testImplementation group: 'org.awaitility',                    name: 'awaitility',                     version: awaitilityVersion
 }
