CB-18468 Upgrading DL requires stopping all the DHs
Before Datalake RDS upgrade a request time validation is introduced:
- all attached datahubs have to be stopped before the RDS upgrade
- this check can be skipped with the following entitlement: CDP_POSTGRES_UPGRADE_SKIP_ATTACHED_DATAHUBS_CHECK

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -104,6 +104,7 @@ auth:
     salt.rotatepassword.enable: true
     postgres.upgrade.embedded.enable: true
     postgres.upgrade.exception.enable: false
+    postgres.upgrade.skip.attached.datahubs.check.enable: false
 
 crn:
   partition: cdp
