--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -105,6 +105,7 @@ auth:
     postgres.upgrade.embedded.enable: true
     postgres.upgrade.exception.enable: false
     postgres.upgrade.skip.attached.datahubs.check.enable: false
+    environment.edit.proxy.enable: true
 
 crn:
   partition: cdp
