CB-18512. Disable cb_cluster_state metrics processing.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -34,7 +34,7 @@ telemetry:
     scrape-interval-seconds: 60
     dev-stack: false
     status-processor:
-      enabled: true
+      enabled: false
       workers: 1
       queue-size-limit: 1000
       http-timeout-seconds: 30
