--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ allprojects {
   }
   apply plugin: 'idea'
   apply plugin: 'eclipse'
+  apply plugin: 'nebula.blacklist'
+
   group = 'com.sequenceiq'
 
   configurations {
@@ -67,6 +69,7 @@ allprojects {
   blacklist {
     flag {
       block group: 'org.powermock'
+      block group: 'com.cedarsoftware', name: 'json-io'
     }
   }
 
