CB-17641 Get rid of Cedarsoft Json-IO

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,7 @@ allprojects {
   blacklist {
     flag {
       block group: 'org.powermock'
+      block group: 'com.cedarsoftware', name: 'json-io'
     }
   }
 
