CB-18855 Added endpoint to retrieve approximate USD cost of clusters
This commit adds the /v1/env/cost endpoint, through which you can retrieve the approximate hourly cost of an environment and the resources under it. This cost value takes into account the cost of the instances used, the cost of the volumes attached, and the price Cloudera charges after DataHubs. These prices are meant to be a rough estimate. The instance costs are retrieved from the providers for the specified region and instance type, and are cached. See AwsPricingCache and AzurePricingCache. The feature itself is placed behind the CDP_CB_COST_CALCULATION entitlement.

This feature is currently not implemented for GCP. In the case of GCP clusters, NotImplementedException is thrown.

--- a/cloud-aws-common/build.gradle
+++ b/cloud-aws-common/build.gradle
@@ -40,6 +40,7 @@ dependencies {
   api group: 'com.amazonaws', name: 'aws-java-sdk-efs', version: awsSdkVersion
   api group: 'com.amazonaws', name: 'aws-java-sdk-ebs', version: awsSdkVersion
   api group: 'com.amazonaws', name: 'aws-java-sdk-networkfirewall', version: awsSdkVersion
+  api group: 'com.amazonaws', name: 'aws-java-sdk-pricing', version: awsSdkVersion
 
   // legacy
   api group: 'com.amazonaws', name: 'aws-java-sdk-autoscaling', version: awsSdkVersion
