CB-18330 Stop Error for Real Time Data Mart and Data Mart Clusters in AWS and Template changes for Data Mart CLusters in Azure
    - We can stop the Real time data mart and data mart clusters in AWS, the error is resolved.
    - Template changes for Data Mart cluster in Azure where the node count for attached volumes is changed to 0 and now in this case ephemeral volume from the instance would be used which is of comparable size of attached volumes.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -877,6 +877,9 @@ cb:
           - service: YARN
             role: NODEMANAGER
             required: false
+          - service: IMPALA
+            role: IMPALAD
+            required: false
         roles:
           - role: GATEWAY
             required: false
