CB-18573 Avoid Frequent throttling with bigger instance chunks. We need to redesign the engine.

--- a/cloud-aws-cloudformation/src/test/resources/application.yml
+++ b/cloud-aws-cloudformation/src/test/resources/application.yml
@@ -11,6 +11,8 @@ spring:
 
 cb:
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     distrox:
