--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -195,6 +195,8 @@ cb:
         upgrade: 200
 
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     distrox:
