--- a/cloud-consumption/src/main/resources/application.yml
+++ b/cloud-consumption/src/main/resources/application.yml
@@ -127,6 +127,8 @@ cb:
       enabled: true
       contentlogging: true
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     hostkey.verify: false
