--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -173,6 +173,8 @@ cb:
     stopStart.batch.size: 10
     create.batch.size: 5
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     hostkey.verify: false
