--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -220,6 +220,8 @@ cb:
     dir: /certs/
 
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     hostkey.verify: false
