--- a/redbeams/src/main/resources/application.yml
+++ b/redbeams/src/main/resources/application.yml
@@ -354,6 +354,8 @@ cb:
     from: no-reply@sequenceiq.com
 
   aws:
+    stopStart.batch.size: 10
+    create.batch.size: 8
     spotinstances.enabled: true
     disabled.instance.types:
     hostkey.verify: false
