CB-18601 Fixing multiple Jackson serialization issues
Annotating for Hibernate's circular references, also extend unit test with this.
Adding Hibernate5 Jackson Module to skip lazy-loaded entities.
Adding Time module to properly serialize Durations.
Changing ObjectMapper configuration to prevent failure in case of self references
(occuring mostly in exceptions).
Cleaning up RevokeCertsRequest.

--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,11 @@ allprojects {
     maven { url = "$cdpRepoUrl" }
     maven { url = "$repoUrl" }
   }
+
   apply plugin: 'idea'
   apply plugin: 'eclipse'
+  apply plugin: 'nebula.blacklist'
+
   group = 'com.sequenceiq'
 
   configurations {
