--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation     project(":template-manager-tag")
     implementation     project(':cluster-dns-connector')
     implementation     project(":sdx-connector")
+    implementation     project(':usage-collection')
 
     implementation     group: "org.yaml",                  name: "snakeyaml",                                version: snakeYamlVersion
     implementation     group: "com.google.code.gson",      name: "gson",                                     version: gsonVersion
