CB-18635 Add short-term fallback for selecting postgres upgrade target version on AWS if necessary permission is missing.
Selecting the target version for RDS postgres upgrade on AWS requies an extra permission, rds:DescribeDBEngineVersions. If this permission is missing, getting the target versions fail with access denied error. In such cases a short-term fallback is added, returning 11.16 as the target version. Currently this version is the hights available upgrade target version. The fallback can be turned on or off in config and the version could be also changed from config.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -137,3 +137,6 @@ cb:
   db.override:
     minRuntimeVersion: 7.2.7
     engineVersion: 11
+    aws.fallback:
+      enabled: true
+      targetversion: "11.16"
