CB-18639. Set follow_inodes for metering fluent config.
details:
- if follow_inodes are not set (at least for newer fluentd agents) - seems like heartbeats.json files are re-processed after log rotation. (that is nto the case with cloud storage logs - at least until this that did not happened)
- for metering this can be a critical problem as really old heartbeats are all processed and this could mean millions of duplicated records.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -931,6 +931,8 @@ existing-stack-patcher:
       enabled: false
       date-before: 2022-01-18
       custom-rpm-url: https://archive.cloudera.com/cp_clients/thunderhead-metering-heartbeat-application-0.1-SNAPSHOT.x86_64.rpm
+    metering-follow-inodes:
+      enabled: true
     cluster-public-endpoint:
       enabled: false
       related-stacks:
