CB-18661 avoid the "ssl" directive is deprecated warning message, and delete the dead code and free up the port 1080.

--- a/freeipa/src/main/resources/freeipa-salt/salt/nginx/conf/ssl-locations.d/freeipa.conf
+++ b/freeipa/src/main/resources/freeipa-salt/salt/nginx/conf/ssl-locations.d/freeipa.conf
@@ -6,4 +6,6 @@ location /ipa {
   proxy_set_header   X-Forwarded-Host $server_name;
   proxy_set_header   X-Forwarded-Proto $scheme;
   proxy_set_header   Referer "https://{{ salt['grains.get']('fqdn') }}/ipa";
+
+  client_body_buffer_size 1m;
 }
