--- a/freeipa/src/main/resources/freeipa-salt/salt/nginx/conf/ssl.conf
+++ b/freeipa/src/main/resources/freeipa-salt/salt/nginx/conf/ssl.conf
@@ -4,19 +4,19 @@ server {
 
     {%- if salt['pillar.get']('freeipa:enable_ccmv2', False) %}
         {% if salt['pillar.get']('freeipa:cidrBlocks') %}
-            listen       9443;
+            listen       9443 ssl;
             allow        127.0.0.1;
             {% for cidr in salt['pillar.get']('freeipa:cidrBlocks') %}
             allow        {{ cidr }};
             {% endfor %}
             deny         all;
         {% else %}
-            listen       127.0.0.1:9443;
+            listen       127.0.0.1:9443 ssl;
         {% endif %}
     {%- else %}
-        listen       9443;
+        listen       9443 ssl;
     {%- endif %}
-    ssl on;
+
     ssl_certificate      /etc/certs/cluster.pem;
     ssl_certificate_key  /etc/certs/cluster-key.pem;
     ssl_client_certificate /etc/certs/cb-client.pem;
