--- a/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
@@ -14,8 +14,8 @@ upstream knox {
 
 server {
     add_header x-response-nginx true always;
-    listen       443;
-    ssl on;
+    listen       443 ssl;
+
     ssl_certificate      /etc/certs-user-facing/server.pem;
     ssl_certificate_key  /etc/certs-user-facing/server-key.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
