--- a/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/ssl.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/ssl.conf
@@ -4,23 +4,22 @@ server {
 
     {%- if salt['pillar.get']('gateway:enable_ccmv2', False) %}
         {% if salt['pillar.get']('gateway:cidrBlocks') %}
-            listen       9443;
+            listen       9443 ssl;
             allow        127.0.0.1;
             {% for cidr in salt['pillar.get']('gateway:cidrBlocks') %}
             allow        {{ cidr }};
             {% endfor %}
             deny         all;
         {% else %}
-            listen       127.0.0.1:9443;
+            listen       127.0.0.1:9443 ssl;
         {% endif %}
     {%- else %}
-        listen       9443;
+        listen       9443 ssl;
     {%- endif %}
 
     client_max_body_size 64M;
     large_client_header_buffers 4 128k;
 
-    ssl on;
     ssl_certificate      /etc/certs/cluster.pem;
     ssl_certificate_key  /etc/certs/cluster-key.pem;
     ssl_client_certificate /etc/certs/cb-client.pem;
