Reproducing freeipa upgarde error after DB restart - never merge!!!
CB-18682 describes the error thoroughly. Here I describe how to reproduce it locally.

If you look at the change, you can see that the freeipa endpoint getRecommendation was modified to call the query that fails consistently after a DB restart.

How to use it:

1. Have an env with freeipa

2. Use the current code. You only need freeipa service to be running

3. Call the getRecommendation endpoint via curl, it should not return anything.

    curl -v -X GET localhost:8090/freeipa/api/v1/freeipa/get_recommendation \
        -H "Content-Type:application/json" \
        -H "x-cdp-actor-crn: <YOUR_ACTOR_CRN>"

4. Restart the DB:

    docker restart cbreak_commondb_1

5. Now call the getRecommendation endpoint again. Now you should get an error in your terminal:

Default error handler: org.hibernate.exception.GenericJDBCException: could not prepare statement

And in IDEA you should be able to see the full stack trace. Note, that the first invocation after restart produces a different SQL error (could not extract ResultSet) than subsequent ones (could not prepare statement), and the original exception is also somewhat different ("EOF" vs "Connection is closed")

Restarting freeipa services fixes the behavior.

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -177,6 +177,19 @@ spring:
     maxActive: 30
   lifecycle:
     timeout-per-shutdown-phase: 60s
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          batch_size: 400
+        order_inserts: true
+        order_updates: true
+
+logging.level.org.hibernate:
+  SQL: DEBUG
+  type.descriptor.sql.BasicBinder: TRACE
 
 rest:
   debug: false
@@ -300,6 +313,7 @@ cb:
       enabled: true
       contentlogging: true
 
+
 cluster:
   monitoring:
     enabled: true
@@ -337,3 +351,4 @@ crn:
 authdistributor:
   host: localhost
   port: 8982
+
