CB-18426 configurable audit for all JaxRS endpoints in Core/DistroX, Datalake, Environment and Freeipa services
Changes:
 - make a configurable strict audit filter via 'cb.audit.allEndpoints.enabled' that generates an audit event for every pathes of JaxRS endpoint
 - register the new filter for every public-facing services of CB: Environment, FreeIpa, Sdx, Distrox/Core
 - set timeout for client towards Audit client as it was infinite by default

--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -211,7 +211,7 @@ cb:
 
 spring:
   application:
-    name: EnvironmentService
+    name: EnvironmentsService
   freemarker:
     template-loader-path: file:/etc/cloudbreak,classpath:/
     prefer-file-system-access: false
