--- a/core/build.gradle
+++ b/core/build.gradle
@@ -250,6 +250,7 @@ dependencies {
   implementation project(':structuredevent-model')
   implementation project(':structuredevent-service-legacy')
   implementation project(':structuredevent-api-cdp')
+  implementation project(':structuredevent-service-cdp')
   implementation project(':template-manager-blueprint')
   implementation project(':template-manager-recipe')
   implementation project(':template-manager-cmtemplate')
