--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -951,3 +951,8 @@ clusterdns:
 sssd:
   entry.cache.timeout: 300
   memcache.timeout: 300
+
+cdp:
+  structuredevent:
+    rest:
+      contentlogging: false
