CB-18699 adding vertical scale recommendation endpoint. This is a must have for the UI and also added some unit test to it. Refactored the current calculation to common module.

--- a/environment-common/build.gradle
+++ b/environment-common/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(":authorization-common")
     implementation project(":environment-api")
     implementation project(":secret-engine")
+    implementation project(":cloud-api")
 
     testImplementation project(":common-model")
     testImplementation project(":auth-connector")
