--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation     project(":flow")
     implementation     project(":auth-connector")
     implementation     project(":environment-api")
+    implementation     project(":environment-common")
     implementation     project(":notification-sender")
     implementation     project(":cloud-reactor")
     implementation     project(":cloud-reactor-api")
