CB-17884 Integratio consumptio service with EBS. Adding cloud provider interaction

--- a/cloud-aws-common/build.gradle
+++ b/cloud-aws-common/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   api group: 'com.amazonaws', name: 'aws-java-sdk-cloudwatch', version: awsSdkVersion
   api group: 'com.amazonaws', name: 'aws-java-sdk-elasticloadbalancingv2', version: awsSdkVersion
   api group: 'com.amazonaws', name: 'aws-java-sdk-efs', version: awsSdkVersion
+  api group: 'com.amazonaws', name: 'aws-java-sdk-ebs', version: awsSdkVersion
   api group: 'com.amazonaws', name: 'aws-java-sdk-networkfirewall', version: awsSdkVersion
 
   // legacy
