CB-17884 adding datahub capability to ebs calculation

--- a/cloud-consumption/src/main/resources/application.yml
+++ b/cloud-consumption/src/main/resources/application.yml
@@ -155,11 +155,12 @@ cb:
     regions: AWS:eu-west-1,AZURE:North Europe,GCP:europe-west1,YARN:default,MOCK:USA
 
 altus:
-  audit:
-    enabled: false
   ums:
     host: localhost
     caller: consumption
+  audit:
+    enabled: true
+    endpoint: localhost:8982
 
 crn:
   partition: cdp
