--- a/orchestrator-salt/build.gradle
+++ b/orchestrator-salt/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation project(':common')
     implementation project(':cloud-common')
 
-    implementation group: 'org.yaml',                      name: 'snakeyaml',                      version: '1.23'
+    implementation group: 'org.yaml',                      name: 'snakeyaml',                      version: snakeYamlVersion
     implementation group: 'org.springframework.boot',      name: 'spring-boot-starter',            version: springBootVersion
     implementation group: 'org.springframework.boot',      name: 'spring-boot-starter-web',        version: springBootVersion
 
