--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -125,6 +125,7 @@ dependencies {
   implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-ec2',               version: awsSdkVersion
   implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-lambda',            version: awsSdkVersion
   implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-s3',                version: awsSdkVersion
+  implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-cloudformation',    version: awsSdkVersion
 
   implementation group: 'org.kohsuke', name: 'wordnet-random-name', version: '1.3'
   implementation group: 'com.google.code.gson',          name: 'gson',                           version: gsonVersion
