--- a/docker-datalake/Dockerfile
+++ b/docker-datalake/Dockerfile
@@ -7,6 +7,7 @@ ARG REPO_URL=https://repo.hortonworks.com/content/repositories/releases
 ARG VERSION=''
 
 ENV VERSION ${VERSION}
+ENV PROMETHEUS_VERSION 0.17.2
 
 WORKDIR /
 
@@ -16,7 +17,7 @@ RUN microdnf install unzip
 ADD ${REPO_URL}/com/sequenceiq/datalake/$VERSION/datalake-$VERSION.jar /datalake.jar
 
 # add jmx exporter
-ADD jmx_prometheus_javaagent-0.16.1.jar /jmx_prometheus_javaagent.jar
+RUN curl -o /jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$PROMETHEUS_VERSION/jmx_prometheus_javaagent-$PROMETHEUS_VERSION.jar
 
 # extract schema files
 RUN ( unzip datalake.jar schema/* -d / ) || \
