--- a/cluster-api/build.gradle
+++ b/cluster-api/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
   implementation     group: 'org.hibernate',           name: 'hibernate-envers',      version: hibernateCoreVersion
 
-  testImplementation(group: 'org.mockito',             name: 'mockito-core',          version: mockitoVersion) {
+  testImplementation(group: 'org.mockito',             name: 'mockito-inline',          version: mockitoVersion) {
     exclude group: 'org.hamcrest'
   }
   testImplementation group: 'org.hamcrest',            name: 'hamcrest',              version: hamcrestVersion
