--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -77,6 +77,7 @@ dependencies {
   implementation     group: 'com.github.briandilley.jsonrpc4j', name: 'jsonrpc4j',                     version: '1.6'
   implementation     group: 'com.dyngr',                        name: 'polling',                       version: dyngrPollingVersion
   implementation     group: 'org.freemarker',                   name: 'freemarker',                    version: freemarkerVersion
+  testImplementation group: 'org.mockito',               name: 'mockito-inline',                   version: mockitoVersion
   testImplementation ('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'junit'
   }
@@ -113,7 +114,7 @@ dependencies {
     implementation     group: 'org.springframework.boot',  name: 'spring-boot-starter-data-jpa',   version: springBootVersion
     implementation     group: 'org.hibernate',             name: 'hibernate-envers',               version: hibernateCoreVersion
     testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
-    testImplementation group: 'org.mockito',               name: 'mockito-core',                   version: mockitoVersion
+    testImplementation group: 'org.mockito',               name: 'mockito-inline',                   version: mockitoVersion
   }
 
   implementation project(":structuredevent-service-cdp")
